--- a/src/test/Bau.MSBuild.Test.Unit/packages.config
+++ b/src/test/Bau.MSBuild.Test.Unit/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bau" version="0.1.0-alpha14" targetFramework="net45" />
-  <package id="FluentAssertions" version="3.0.90" targetFramework="net45" />
+  <package id="Bau" version="0.1.0-beta01" targetFramework="net45" />
+  <package id="FluentAssertions" version="3.0.107" targetFramework="net45" />
   <package id="ScriptCs.Contracts" version="0.9.0" targetFramework="net45" />
   <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net45" developmentDependency="true" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
